--- a/example/example.html
+++ b/example/example.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Example</title>
+    <link rel="stylesheet" type="text/css" href="../resources/imprimatur/style.css">
   </head>
   <body>
     <div id="main"></div>
